Fix alignment issues with ingredient cards

--- a/frontend/src/components/groceries/IngredientCard.module.css
+++ b/frontend/src/components/groceries/IngredientCard.module.css
@@ -7,7 +7,7 @@
   border: 3px solid black;
   border-radius: 10px;
   background-color: white;
-  min-width: 200px;
+  max-width: 230px;
   margin: 0 auto;
 }
 
