--- a/frontend/src/components/pantry/IngredientCard.module.css
+++ b/frontend/src/components/pantry/IngredientCard.module.css
@@ -8,6 +8,7 @@
   border-radius: 10px;
   background-color: white;
   margin: 0 auto;
+  max-width: 250px;
 }
 
 .ingredientCard button {
