--- a/frontend/src/pages/Groceries.module.css
+++ b/frontend/src/pages/Groceries.module.css
@@ -2,7 +2,7 @@
   margin-top: var(--space-m);
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   grid-column-gap: var(--space-l);
   grid-row-gap: var(--space-l);
 }
